Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/StaticMethodNegTest.out
StaticMethodNegTest.java:23:12: compiler.err.not.encl.class: A
1 error
